# subscribe-middleware

./: .gitignore  CMakeLists.txt  README.md
app/include/: subscribe.h
app/src/: subscribe-middleware.c
